# ton_client_dart

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
doc/api/: __404error.html  index.html  index.json
example/: README.md  pubspec.yaml
example/lib/: main.dart
ios/: ton_client_dart.podspec
ios/Classes/: SwiftTonClientDartPlugin.swift  TonClientDartPlugin.h  TonClientDartPlugin.m
lib/: ton_client_dart.dart
lib/src/: abi_module.dart  abi_types.dart  boc_module.dart  boc_types.dart  client_module.dart  client_types.dart  core.dart  crypto_module.dart  crypto_types.dart  debot_module.dart  debot_types.dart  net_module.dart  net_types.dart  processing_module.dart  processing_types.dart  proofs_module.dart  proofs_types.dart  tonclient.dart  tonsdkcore.dart  tonsdkmodule.dart  tonsdktypes.dart  tvm_module.dart  tvm_types.dart  utils_module.dart  utils_types.dart
test/: micro_test.dart  test.dart
test/files/: 1_333.boc  run_get_result.txt  test_process_message.txt  test_send_message.txt  test_subscription.txt  test_wait_for_transaction.txt
test/src/: abi_test.dart  boc_test.dart  client_test.dart  crypto_test.dart  debot_test.dart  processing_net_test.dart  tvm_test.dart  (+1 more)
tools/: cmt.txt  commit.txt
tools/libtonclientdart/: Cargo.toml  build.js  build_linux.sh  libtonclientdart.cpp
tools/libtonclientdart/include/: dart_api_dl.c
tools/ton_client_dart/: Cargo.toml  build.rs  cbindgen.toml  makefile
tools/ton_client_dart/src/: dart_types.rs  lib.rs
tools/ton_client_dart/src/clib/: build.sh  dartnativeport.c
(+976 files in other folders)
