[package]
name = "ton_client_dart"
version = "1.1.3"
authors = ["author"]
license = "Apache-2.0"

[lib]
name = "ton_client_dart"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
ton_client = {path = "../ton_client"}
serde_json = "1.0.41"
serde_derive = "1.0.91"
serde = "1.0.91"

[build-dependencies]
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"

